--- a/wp-content/themes/blankslate-master/assets/css/sass/components/_section.scss
+++ b/wp-content/themes/blankslate-master/assets/css/sass/components/_section.scss
@@ -1,16 +1,3 @@
- 
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -168,6 +155,10 @@ section {
             }
             img{
                 width: 100%;
+            }
+
+            .this-text{
+                display: none;
             }
         }
 
@@ -655,6 +646,7 @@ section {
             left: 50%;
             transform: translateX(-50%);
             bottom: 10px;
+            z-index: 2;
             button {
                 &.owl-prev {
                     left: 0;
@@ -1279,7 +1271,7 @@ section {
                                 }
                             }
 
-                            span{
+                            .circle{
                                 display: block;
                                 flex: 0 0 20px;
                                 height: 20px;
@@ -1377,12 +1369,12 @@ section {
 
             &:nth-child(2n + 2) {
                 background: #ffffff;
-                border-radius: 200px 0px 0px 200px;
+                border-radius: 200px 0px 0px 200px !important;
                 flex: 0 0 calc(45% - 20px);
                 flex-direction: row-reverse;
                 justify-content: flex-end;
                 padding-left: 100px;
-                margin-left: auto;
+                margin-left: auto !important;
                 .text{
                     margin-left: 0;
                     margin-right: 50px;
@@ -1398,7 +1390,7 @@ section {
                 border-radius: 0px 200px 200px 0px;
                 flex: 0 0 90%;
                 padding-left: 140px;
-                
+                margin-left: initial;
                 .text {
                     .title,
                     .description {
