--- a/wp-content/themes/blankslate-master/assets/css/sass/main.scss
+++ b/wp-content/themes/blankslate-master/assets/css/sass/main.scss
@@ -93,6 +93,7 @@ a {
     line-height: 18px;
     color: #FFFFFF;
     transition: 0.3s;
+    cursor: pointer;
     &:hover{
         box-shadow: 0px 0px 14px #ea5b0c;
     }
@@ -122,7 +123,8 @@ a {
     margin-top: 64px;
     display: flex;
     justify-content: center;
-
+    position: relative;
+    z-index: 1;
     .owl-dot {
         width: 9px;
         height: 9px;
@@ -158,6 +160,7 @@ a {
         }
     }
 }
+
 
 
 @import 'components/header';
