--- a/wp-content/themes/blankslate-master/assets/css/sass/main.scss
+++ b/wp-content/themes/blankslate-master/assets/css/sass/main.scss
@@ -86,6 +86,7 @@ a {
 
 .btn{
     background: #EA5B0C;
+    background-color: transparent;
     border-radius: 100px;
     padding: 16px 48px;
     font-weight: bold;
