--- a/wp-content/themes/blankslate-master/assets/css/css/main.css
+++ b/wp-content/themes/blankslate-master/assets/css/css/main.css
@@ -72,7 +72,6 @@ a {
 
 .btn {
   background: #EA5B0C;
-  background-color: transparent;
   border-radius: 100px;
   padding: 16px 48px;
   font-weight: bold;
@@ -80,7 +79,8 @@ a {
   line-height: 18px;
   color: #FFFFFF;
   transition: 0.3s;
-  cursor: pointer; }
+  cursor: pointer;
+  border: 0; }
   .btn:hover {
     box-shadow: 0px 0px 14px #ea5b0c; }
 
@@ -196,7 +196,7 @@ header {
             content: "";
             position: absolute;
             left: -6px;
-            top: 49%;
+            top: 50%;
             transform: translateY(-50%);
             background: #EA5B0C;
             border-radius: 50%;
@@ -204,7 +204,8 @@ header {
             height: 5px;
             opacity: 0;
             visibility: hidden;
-            transition: all 0.3s ease; }
+            transition: all 0.3s ease;
+            margin-top: -1.5px; }
       header .innerWrap nav .signInWrap a {
         font-weight: 500;
         font-size: 15px;
@@ -1241,6 +1242,17 @@ section {
         margin-top: 24px;
         display: flex;
         align-items: center; }
+        .form-wrap .form-innerWrap .left .form .send-btn .btn {
+          position: relative;
+          overflow: hidden; }
+        .form-wrap .form-innerWrap .left .form .send-btn input {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          opacity: 0;
+          cursor: pointer; }
         .form-wrap .form-innerWrap .left .form .send-btn .error-message {
           margin-left: 24px;
           font-style: normal;
@@ -2245,7 +2257,10 @@ footer {
     padding-left: 120px; }
 
   .whats-new-wrap .slider .item .option:nth-child(2n) {
-    padding-left: 60px; } }
+    padding-left: 60px; }
+
+  header .innerWrap nav .menu li::before {
+    margin-top: -0.5px; } }
 @media screen and (max-width: 1024px) {
   header .innerWrap nav .menu ul,
   header .innerWrap .language.mobile,
