--- a/wp-content/themes/blankslate-master/assets/css/sass/components/_section.scss
+++ b/wp-content/themes/blankslate-master/assets/css/sass/components/_section.scss
@@ -1316,6 +1316,20 @@ section {
                     margin-top: 24px;
                     display: flex;
                     align-items: center;
+                    .btn{
+                        position: relative;
+                        overflow: hidden;
+                    }
+                    input{
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        opacity: 0;
+                        cursor: pointer;
+                    }
+
                     .error-message{
                         margin-left: 24px;
                         font-style: normal;
