--- a/wp-content/themes/blankslate-master/assets/css/sass/main.scss
+++ b/wp-content/themes/blankslate-master/assets/css/sass/main.scss
@@ -86,7 +86,6 @@ a {
 
 .btn{
     background: #EA5B0C;
-    background-color: transparent;
     border-radius: 100px;
     padding: 16px 48px;
     font-weight: bold;
@@ -95,6 +94,7 @@ a {
     color: #FFFFFF;
     transition: 0.3s;
     cursor: pointer;
+    border: 0;
     &:hover{
         box-shadow: 0px 0px 14px #ea5b0c;
     }
